--- a/main.css
+++ b/main.css
@@ -1,66 +1,97 @@
-
-body {
+body{
   font-family: Arial;
+      background: linear-gradient(270deg,#fffdc0, #ffd2fb);
+      background-size: 400% 400%;
+  
+      -webkit-animation: AnimationName 30s ease infinite;
+      -moz-animation: AnimationName 30s ease infinite;
+      animation: AnimationName 30s ease infinite;
+  
+  margin-top: 5rem;
+  margin-left: 5rem;
+  margin-bottom: 5rem;
+}
+@-webkit-keyframes AnimationName {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@-moz-keyframes AnimationName {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
+}
+@keyframes AnimationName {
+  0%{background-position:0% 50%}
+  50%{background-position:100% 50%}
+  100%{background-position:0% 50%}
 }
 
 .container {
-  padding: 2rem;
+padding: 2rem;
+margin: 2rem;
 }
 
 h1 {
-  font-weight: normal;
-  font-size: 1.5rem;
-  margin: 0;
+font-weight: normal;
+font-size: 1.5rem;
+margin: 0;
 }
 
-.song-description {
-  display: none;
+.title {
+  color: white;
 }
 
-.song-description.active {
+.description {
+  color: white;
+}
+
+.description.active {
   display: block;
 }
 
-.song-image {
-  width: 100%;
-  max-width: 400px;
-  height: auto;
-  display: none;
+.director {
+  color: white;
 }
 
-.song-image.active {
+.director.active {
   display: block;
 }
 
-.song-container {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
-  padding: 1rem;
-  box-sizing: border-box;
-  border: 1px solid black;
-  border-radius: 25px;
+.poster {
+width: 100%;
+max-width: 200px;
+margin: 2rem;
+/*   display: none; */
+
 }
 
-.image-container {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap: 20px;
-}
-.song-container:hover {
-  border: 1px solid black;
-  border-radius: 25px;
-  cursor: pointer;
+.poster.active {
+display: block;
 }
 
-.song-container.active .song-title {
-  display: block;
+.film-container {
+width: 100%;
+display: grid;
+grid-template-columns: 1fr 1fr;
+grid-gap: 20px;
+padding: 1rem;
+box-sizing: border-box;
+border: 5px solid white;
+border-radius: 25px;
+}
+
+.film-container:hover {
+border: 5px solid white;
+border-radius: 25px;
+cursor: pointer;
+}
+
+.film-container.active .film-name {
+display: block;
 }
 
 .filter {
-  padding: 2rem;
-  cursor: pointer;
+padding: 2rem;
+cursor: pointer;
 }
-
